--- a/iam-rucio-sync/iam-sync.conf
+++ b/iam-rucio-sync/iam-sync.conf
@@ -1,5 +1,5 @@
 [IAM]
-iam-server = https://iam-escape.cloud.cnaf.infn.it
+iam-server = https://iam-escape.cloud.cnaf.infn.it/
 
 # When not defined token-server defaults to the iam-server 
 # token-server = https://iam-escape.cloud.cnaf.infn.it
