add .gitignore + housekeeping

--- a/iam-rucio-sync/iam-sync.conf
+++ b/iam-rucio-sync/iam-sync.conf
@@ -4,8 +4,8 @@ iam-server = https://iam-escape.cloud.cnaf.infn.it/
 # When not defined token-server defaults to the iam-server 
 # token-server = https://iam-escape.cloud.cnaf.infn.it
 
-client-id = AAAA-AAA-A # Add client-id Here
+client-id = f1a42ecf-1d2a-4bdb-9632-9ca62f717e16
 
 # Secret can be configure either here or using a seperate file
-# client-secret = my_password
+# client-secret = <CLIENT_SECRET>
 client-secret-path = ./client_secret.secret
