--- a/iam-gridmap-sync/iam-gridmap.conf
+++ b/iam-gridmap-sync/iam-gridmap.conf
@@ -7,11 +7,11 @@ iam-server = https://iam-escape.cloud.cnaf.infn.it
 # Default role/group users will be assigned to
 default-role = ops001
 
-client-id = AAAA-AAA-A # Add client-id Here
+client-id = f1a42ecf-1d2a-4bdb-9632-9ca62f717e16
 
 # Secret can be configure either here or using a seperate file
-client-secret = my_password
-# client-secret-path = ./client_secret.secret
+# client-secret = <CLIENT_SECRET>
+client-secret-path = ./client_secret.secret
 
 # Where to generate the gridmap
-output_gridmap_path = ./test
+output_gridmap_path = ./sample.gridmap.txt
