--- a/db_utils/requirements.pip.txt
+++ b/db_utils/requirements.pip.txt
@@ -1,4 +1,4 @@
-aiohttp==3.8.0
+aiohttp==3.8.1
 aiosignal==1.2.0
 alembic==1.6.5
 argcomplete==1.12.2
@@ -36,7 +36,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 jmespath==0.10.0
 jsonschema==3.2.0
-Mako==1.1.5
+Mako==1.1.6
 MarkupSafe==2.0.1
 maxminddb==2.2.0
 multidict==5.2.0
@@ -44,7 +44,7 @@ numpy==1.19.4
 oauth2client==4.1.3
 oic==1.2.1
 paramiko==2.7.2
-pbr==5.7.0
+pbr==5.8.0
 prometheus-client==0.9.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -71,7 +71,7 @@ statsd==3.3.0
 stevedore==3.5.0
 stomp.py==6.1.1
 tabulate==0.8.9
-typing-extensions==3.10.0.2
+typing_extensions==4.0.0
 urllib3==1.26.5
 Werkzeug==2.0.2
 yapf==0.31.0
