--- a/gfal-sam-testing/requirements.txt
+++ b/gfal-sam-testing/requirements.txt
@@ -1,7 +1,3 @@
-certifi==2021.5.30
-charset-normalizer==2.0.5
-colorama==0.4.5
-idna==3.2
-requests==2.27.1
-urllib3==1.26.6
-yapf==0.32.0
+colorama
+requests
+yapf
